[package]
name = "libcpu"
description = "LibCPU is a library to interact with platform-independent and platform-dependant features of the CPU Resources"
categories = ["no-std", "embedded", "hardware-support"]
keywords = ["cpu", "libcpu", "platforms", "features"]
authors = ["Cedric Hammes <cach30verfl0w@gmail.com>"]
license-file = "LICENSE"
version = "1.0.0"
edition = "2021"

[features]
default = ["cpuid_cache"]
cpuid_cache = []

[dependencies]
bitflags = "2.4.0"
paste = "1.0.14"
bit_field = "0.10.2"
